Fix text overflows for Launcher

--- a/src-built-in/components/appLauncher2/style.css
+++ b/src-built-in/components/appLauncher2/style.css
@@ -341,16 +341,13 @@ select:focus, option:focus {
     color: var(--appMenu-app-favorite-color);
   }
 
-  .app-item-title .app-friendly-name {
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
-    width: 405px;
-  }
-
   .app-item-tags {
     display: flex;
     align-items: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 390px;
   }
 
   .app-item-tags i {
@@ -367,6 +364,11 @@ select:focus, option:focus {
     font-size: 13px;
     margin-bottom: 7px;
     line-height: 1;
+    width: 390px;
+    height: 14px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   .app-item-title i {
